Bug 509253 - In SMB shares, Dolphin displays "No shared folders found" in empty folders instead of "folder is empty".
Summary: In SMB shares, Dolphin displays "No shared folders found" in empty folders in...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 509295 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-07 22:31 UTC by yoann.yvin
Modified: 2025-10-23 16:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Empty SMB folder (44.93 KB, image/png)
2025-09-07 22:31 UTC, yoann.yvin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description yoann.yvin 2025-09-07 22:31:47 UTC
Created attachment 184796 [details]
Empty SMB folder

SUMMARY
In SMB shares, Dolphin displays "No shared folders found", which makes no sense.

STEPS TO REPRODUCE
1. Go to an empty folder in an SMB share with Dolphin (smb://server/empty_folder/)

OBSERVED RESULT
Dolphin displays "No shared folders found". This is the shared folder, it's empty, there's no actual error.
Creating a file makes the message disappear, even though it was about folders.

EXPECTED RESULT
Dolphin should display "Folder is empty", or "Shared folder is empty".

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 42
KDE Plasma Version: 6.4.4-1
Comment 1 Bug Janitor Service 2025-10-15 15:18:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1064
Comment 2 Méven 2025-10-15 15:39:21 UTC
*** Bug 509295 has been marked as a duplicate of this bug. ***
Comment 3 Méven 2025-10-21 08:12:51 UTC
*** Bug 509295 has been marked as a duplicate of this bug. ***
Comment 4 Méven 2025-10-23 16:10:25 UTC
Git commit fdb014ad3fc80e3de75612f3e6e77e6cf1881c6b by Méven Car.
Committed on 23/10/2025 at 15:55.
Pushed by meven into branch 'master'.

dolphinview: for samba use special placeholder only for /

And no hostname set cases.

For other invalid cases (invalid host, host unreachable), we get the Canceled Loading status.

M  +1    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/fdb014ad3fc80e3de75612f3e6e77e6cf1881c6b