dolphinview: for samba use special placeholder only for /

And no hostname set cases.

For other invalid cases (invalid host, host unreachable), we get the Canceled Loading status.

BUG: 509253